--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -238,6 +238,11 @@ img {
   color: var(--first-color);
 }
 
+a{
+  color: white;
+  
+}
+
 /*----- MEDIA QUERIES -----*/
 @media screen and (min-width: 768px) {
   body {
