--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@
 
 /*Fuente y tipografia*/
 :root {
-  --body-font: 'Poppins', sans-serif;
+  --body-font: "Poppins", sans-serif;
   --h1-font-size: 2.5rem;
   --h2-font-size: 1rem;
   --normal-font-size: 0.93rem;
@@ -37,9 +37,11 @@
 }
 
 /*----- BASE -----*/
-*, ::before, ::after {
+*,
+::before,
+::after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -51,7 +53,8 @@ body {
   overflow: hidden;
 }
 
-h1, h2 {
+h1,
+h2 {
   margin: 0;
 }
 
@@ -94,11 +97,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-weight: 700;
 }
 
@@ -113,8 +116,8 @@ img {
     height: 45%;
     padding: 1.5rem;
     border-radius: 0 0 1rem 1rem;
-    -webkit-transition: .5s;
-    transition: .5s;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
   }
 }
 
@@ -136,7 +139,7 @@ img {
 
 .nav__link:hover::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 1.5rem;
   height: 0.1875rem;
   left: 0.125rem;
@@ -169,12 +172,12 @@ img {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  grid-template-columns: 1fr;
   -ms-grid-rows: max-content max-content;
-      grid-template-rows: -webkit-max-content -webkit-max-content;
-      grid-template-rows: max-content max-content;
+  grid-template-rows: -webkit-max-content -webkit-max-content;
+  grid-template-rows: max-content max-content;
   -ms-flex-line-pack: distribute;
-      align-content: space-around;
+  align-content: space-around;
   row-gap: 2.3rem;
   height: 100%;
   font-weight: 700;
@@ -201,13 +204,15 @@ img {
 .home__button {
   display: inline-block;
   margin-top: 1.5rem;
-  font-size: .75rem;
+  font-size: 0.75rem;
   color: var(--white-color);
-  padding: .625rem 1rem;
-  border-radius: .25rem;
-  
+  padding: 0.625rem 1rem;
+  border-radius: 0.25rem;
+
   background-image: linear-gradient(to right, var(--black-color), var(--first-color));
 }
+
+
 
 .home__img {
   position: absolute;
@@ -223,8 +228,8 @@ img {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   padding-bottom: 1rem;
 }
 
@@ -238,9 +243,8 @@ img {
   color: var(--first-color);
 }
 
-a{
+a {
   color: white;
-  
 }
 
 /*----- MEDIA QUERIES -----*/
@@ -264,7 +268,8 @@ a{
     margin-left: 3rem;
     margin-bottom: 0;
   }
-  .nav__toggle, .nav__close {
+  .nav__toggle,
+  .nav__close {
     display: none;
   }
   .nav__link {
@@ -272,10 +277,10 @@ a{
   }
   .home {
     -ms-grid-rows: max-content 20px;
-        grid-template-rows: -webkit-max-content 20px;
-        grid-template-rows: max-content 20px;
+    grid-template-rows: -webkit-max-content 20px;
+    grid-template-rows: max-content 20px;
     -ms-flex-line-pack: center;
-        align-content: center;
+    align-content: center;
   }
   .home__information {
     margin-top: 2rem;
@@ -283,8 +288,8 @@ a{
   .home__social {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     padding-top: 8rem;
     padding-bottom: 0;
   }
@@ -297,7 +302,7 @@ a{
     right: 5%;
   }
 }
-
+/* for the phone */
 @media screen and (min-width: 1200px) {
   .bd-grid {
     margin-left: auto;
