--- a/Programming/assets/css/styles.css
+++ b/Programming/assets/css/styles.css
@@ -6,11 +6,11 @@
   --header-height: 3rem;
 
   /*========== Colors ==========*/
-  --first-color: #001aff;
-  --first-color-alt: #2d42ff;
-  --first-color-send: #0316c5;
+  --first-color: #DA2535;
+  --first-color-alt: #C42130;
+  --first-color-send: #DE3B49;
   --title-color: #161212;
-  --text-color: #313131;
+  --text-color: #5B5757;
   --text-color-light: #8F8A8A;
   --body-color: #FEFBFB;
   --container-color: #FFF;
@@ -64,8 +64,8 @@ body.dark-theme{
   --first-color-send: #161212;
   --title-color: #F3F1F1;
   --text-color: #D1C7C8;
-  --body-color: #000000;
-  --container-color: #141414;
+  --body-color: #030303;
+  --container-color: #1f1a1b;
 }
 
 /*========== Button Dark/Light ==========*/
